fix footer spacing issue

--- a/_sass/base/_layout.scss
+++ b/_sass/base/_layout.scss
@@ -24,8 +24,8 @@ summary {
 }
 
 footer {
-  margin-top: var(--spacing--large);
-  margin-bottom: var(--spacing--large);
+  padding-top: var(--spacing--large);
+  padding-bottom: var(--spacing--large);
 
   li {
     display: inline-block;
